--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,61 @@ body{
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  background-color: rgb(208, 227, 233);
+}
+@media only screen and (max-width: 1000px) {
+  body {
+    background-color: rgb(228, 240, 244);
+  }
+}
+
+  
+  
+
+.income-list {
+	padding: 15px;
+}
+
+.income-list .income-item {
+	position: relative;
+	padding: 10px 15px;
+	background-color: #FFF;
+	border-radius: 8px;
+	margin-bottom: 15px;
+	display: flex;
+	transition: 0.4s;
+	padding-left: 75px;
+}
+
+.income-list .income-item .remove-item {
+	position: absolute;
+	width: 0;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	overflow: hidden;
+
+	cursor: pointer;
+	display: block;
+	color: var(--light);
+	font-weight: 600;
+	background-color: var(--alert);
+	border-radius: 8px 0px 0px 8px;
+	transition: 0.2s;
+}
+
+.income-list .income-item:hover .remove-item {
+	width: 50px;
+}
+
+.income-list .income-item .subject {
+	flex: 1 1 100%;
+}
+
+.income-list .income-item .price,
+.income-list .income-item .date {
+	min-width: 125px;
+}
+.income-list .income-item:hover {
+	box-shadow: 0px 0px 6px rgba(0,0,0,0.1);
 }
